--- a/package.json
+++ b/package.json
@@ -26,8 +26,10 @@
     "@angular/router": "~8.2.8",
     "hammerjs": "^2.0.8",
     "ngx-toastr": "^11.0.0",
+    "pdfmake": "^0.1.60",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
+    "xlsx": "^0.15.1",
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
