--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "package": "electron-builder build --dir",
+    "dist": "electron-builder build"
   },
   "dependencies": {
     "@angular/animations": "~8.2.8",
@@ -42,6 +44,8 @@
     "@types/node": "~8.9.4",
     "codelyzer": "^5.0.0",
     "electron": "^6.0.10",
+    "electron-builder": "^21.2.0",
+    "electron-packager": "^14.0.6",
     "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~4.1.0",
@@ -53,6 +57,52 @@
     "ts-node": "~7.0.0",
     "tslint": "~5.15.0",
     "typescript": "~3.5.3"
+  },
+  "build": {
+    "productName": "angular-electron",
+    "appId": "com.example.companyDashboard",
+    "directories": {
+      "output": "release",
+      "buildResources": "dist"
+    },
+    "asar": false,
+    "files": [
+      "**/*",
+      "!**/*.ts",
+      "!*.code-workspace",
+      "!LICENSE.md",
+      "!package.json",
+      "!package-lock.json",
+      "!src/",
+      "!e2e/",
+      "!hooks/",
+      "!angular.json",
+      "!_config.yml",
+      "!karma.conf.js",
+      "!tsconfig.json",
+      "!tslint.json"
+    ],
+    "win": {
+      "icon": "pdf.ico",
+      "target": [
+        "portable"
+      ]
+    },
+    "portable": {
+      "artifactName": "pvmplayer_portable.exe"
+    },
+    "mac": {
+      "icon": "pdf.ico",
+      "target": [
+        "dmg"
+      ]
+    },
+    "linux": {
+      "icon": "pdf.ico",
+      "target": [
+        "AppImage"
+      ]
+    }
   },
   "repository": {
     "type": "git",
@@ -67,7 +117,7 @@
     "electron",
     "pdfmake"
   ],
-  "author": "Zubair",
+  "author": "Zubair <kazizubair1994@gmail.com>",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/Zubair94/invoice-generator-excel/issues"
